--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,45 +1,40 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
-    <head>
-        <script
-            defer
-            src="https://us.umami.is/script.js"
-            data-website-id="13230151-96f3-4625-bcd1-04f0046fb02d"
-        ></script>
-        <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        {{- partial "favicon.html" . -}}
-        <title>
-            {{- block "title" . }}{{ with .Title }}{{ . }} | {{ end }}{{
-            .Site.Title }}{{- end }}
-        </title>
 
-        {{- partial "seo_tags.html" . -}}
-        <meta name="referrer" content="no-referrer-when-downgrade" />
+<head>
+    <script defer src="https://us.umami.is/script.js" data-website-id="13230151-96f3-4625-bcd1-04f0046fb02d"></script>
+    <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {{- partial "favicon.html" . -}}
+    <title>
+        {{- block "title" . }}{{ with .Title }}{{ . }} | {{ end }}{{
+        .Site.Title }}{{- end }}
+    </title>
 
-        {{ with .OutputFormats.Get "rss" -}} {{ printf `
-        <link rel="%s" type="%s" href="%s" title="%s" />
-        ` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }} {{ end -}}
-        {{- partial "style.html" . -}}
+    {{- partial "seo_tags.html" . -}}
+    <meta name="referrer" content="no-referrer-when-downgrade" />
 
-        <!-- Vertical layout for certain page types -->
-        {{ if eq .Type "vert" }} {{ partial "style_vertical.html" . }} {{ end }}
+    {{ with .OutputFormats.Get "rss" -}} {{ printf `
+    <link rel="%s" type="%s" href="%s" title="%s" />
+    ` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }} {{ end -}}
+    {{- partial "style.html" . -}}
 
-        <!-- A partial to be overwritten by the user.
+    <!-- A partial to be overwritten by the user.
         Simply place a custom_head.html into
         your local /layouts/partials-directory -->
-        {{- partial "custom_head.html" . -}}
-    </head>
+    {{- partial "custom_head.html" . -}}
+</head>
 
-    <body>
-        <header>{{- partial "header.html" . -}}</header>
-        <main>{{- block "main" . }}{{- end }}</main>
-        <footer>{{- partial "footer.html" . -}}</footer>
+<body>
+    <header>{{- partial "header.html" . -}}</header>
+    <main>{{- block "main" . }}{{- end }}</main>
+    <footer>{{- partial "footer.html" . -}}</footer>
 
-        <!-- A partial to be overwritten by the user.
+    <!-- A partial to be overwritten by the user.
         Simply place a custom_body.html into
         your local /layouts/partials-directory -->
-        {{- partial "custom_body.html" . -}}
-    </body>
+    {{- partial "custom_body.html" . -}}
+</body>
+
 </html>
