refactor(data): remove LXGW WenKai font and update README, about, and toolbox
- Removed LXGW WenKai font from styles and related files
- Updated font listings in README and about pages
- Added new post on separating JPEG and RAW photos from iCloud
- Enhanced toolbox with emoji for app listings

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,22 +1,13 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
-    /* Chinese font */
-    @font-face {
-        font-family: 'LXGW WenKai';
-        src: url('/fonts/LXGWWenKaiScreen.ttf') format('truetype');
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-    }
-
     /* this prevents safari rendering too bold fonts */
     * {
         font-synthesis: none !important;
     }
 
     body {
-        font-family: 'LXGW WenKai', 'Atkinson Hyperlegible Next', sans-serif;
+        font-family: 'Atkinson Hyperlegible Next', sans-serif;
         margin: auto;
         padding: 20px;
         max-width: 720px;
