feat(embeddings): add script to generate and cache post embeddings with Ollama
- Add generate_post_embeddings.py to compute and store embeddings for blog posts
- Support incremental updates and caching of embeddings, similarities, and related posts
- Add related posts display in single post template using the generated embeddings data
- Fix typo in koreader dictionary post
- Update toolbox

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -22,6 +22,10 @@
     {{ end }}
 </p>
 
+{{ if eq .Section "posts" }}
+{{ partial "related-posts.html" . }}
+{{ end }}
+
 <!-- Next/Previous Post Navigation -->
 {{ if eq .Type "posts" "zh" }}
 <div class="post-navigation">
