docs(now,toolbox): update now page and toolbox, refresh data
- now: add things-mcp + Claude GTD weekly roundtable bullet
- toolbox: add Calendr, Consent-O-Matic, pomo, Simple Comic; add darktable, geist-font to archive
- data: bump Concept2 lifetime meters, regenerate post embeddings

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -179,6 +179,20 @@
         display: flex;
     }
 
+    ul.toolbox-list li.toolbox-section {
+        display: block;
+    }
+
+    ul.toolbox-list ul.toolbox-sublist {
+        padding-left: 1.5em;
+        margin-top: 0.25em;
+        margin-bottom: 0.5em;
+    }
+
+    ul.toolbox-list ul.toolbox-sublist li {
+        display: flex;
+    }
+
     ul.blog-posts li span {
         flex: 0 0 130px;
     }
