--- a/layouts/shortcodes/postslist.html
+++ b/layouts/shortcodes/postslist.html
@@ -1,11 +1,32 @@
-<!-- This is layouts/shortcodes/postslist.html -->
-<div class="latest-post">
-    {{ $posts := where (where .Site.RegularPages "Type" "in" (slice "zh"
-    "posts")) "Params.draft" "!=" true }} {{ $recentPost := first 7
-    ($posts.ByDate.Reverse) }} {{ range $recentPost }}
-    <div class="latest-post-item">
-        <span class="post-date">{{ .Date.Format "2006-01-02" }}</span>
-        <a href="{{ .RelPermalink }}" class="post-title">{{ .Title }}</a>
-    </div>
+{{ $posts := where (where .Site.RegularPages "Type" "in" (slice "zh" "posts")) "Params.draft" "!=" true }}
+{{ $recentPost := first 7 ($posts.ByDate.Reverse) }}
+<div class="post-list">
+  {{ range $i, $p := $recentPost }}
+    {{ if eq $i 0 }}
+      <article class="post-list-featured">
+        <div class="post-list-featured-meta">
+          <span class="post-list-featured-date">{{ $p.Date.Format "2006 01 02" }}</span>
+          {{ with $p.Params.lang }}
+            <span class="post-list-lang" aria-hidden="true">{{ if eq . "zh" }}中{{ else }}EN{{ end }}</span>
+          {{ end }}
+        </div>
+        <a href="{{ $p.RelPermalink }}" class="post-list-featured-link">
+          <h2 class="post-list-featured-title">{{ $p.Title }}</h2>
+          {{ with $p.Params.description }}
+            <p class="post-list-featured-excerpt">{{ . }}</p>
+          {{ end }}
+        </a>
+      </article>
+    {{ else }}
+      <article class="post-list-item">
+        <a href="{{ $p.RelPermalink }}" class="post-list-item-link">
+          <span class="post-list-item-date">{{ $p.Date.Format "2006 01 02" }}</span>
+          <span class="post-list-item-title">{{ $p.Title }}</span>
+          {{ with $p.Params.lang }}
+            <span class="post-list-lang post-list-lang--small" aria-hidden="true">{{ if eq . "zh" }}中{{ else }}EN{{ end }}</span>
+          {{ end }}
+        </a>
+      </article>
     {{ end }}
+  {{ end }}
 </div>
