--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,7 +19,7 @@
           <span>
             <i>
               <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-                {{ .Date.Format "2006 · 01" }}
+                {{ .Date.Format "2006 01 02" }}
               </time>
             </i>
           </span>
