--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,7 +15,9 @@
 <blockquote><b>tl;dr</b><br />{{ .Params.description }}</blockquote>
 {{ end }}
 
+<div class="single-post">
 <content> {{ .Content }} </content>
+</div>
 <p>
     {{ range (.GetTerms "tags") }}
     <a href="{{ .Permalink }}">#{{ .LinkTitle | lower}}</a>
